--- a/style.css
+++ b/style.css
@@ -1,42 +1,13 @@
 body {
-    background-color: #222;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  font-family: Arial, sans-serif;
 }
 
-.calculator {
-    background-color: rgb(251, 157, 195);
-    border-radius: 10px;
-    padding: 20px;
-    width: 300px;
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
 }
 
-#result {
-    background-color: #eee;
-    border: none;
-    border-radius: 5px;
-    font-size: 24px;
-    height: 50px;
-    margin-bottom: 10px;
-    padding: 10px;
-    text-align: right;
-    width: 94%;
-}
-
-.buttons {
-    display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(3, 1fr);
-}
-
-button {
-    background-color: rgb(78, 72, 76);
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    font-size: 24px;
-    height: 50px;
-    outline: none;
-}
+nav ul {
+  list-style: none;
+  margin: 
